# Pattern

./: .clang-format  .gitignore  CMakeLists.txt  README.md  appveyor.yml  conanfile.py  conanfile.txt
.github/workflows/: Windows.yml  ubuntu.yml
creational/: CMakeLists.txt
creational/abstractFactory/: CMakeLists.txt  vwFactory.cpp  vwFactory.h
creational/abstractFactory/include/: CMakeLists.txt  carAbstractFactory.h
creational/abstractFactory/src/: CMakeLists.txt  vwFactory.cpp
creational/abstractFactory/test/: CMakeLists.txt  abstractCarFactoryTest.cpp
creational/builder/: CMakeLists.txt  message.cpp  message.h  messageBuilder.cpp  messageBuilder.h
creational/builder/test/: CMakeLists.txt  messageBuilderTester.cpp  messageTester.cpp
creational/factory/: CMakeLists.txt  message.cpp  message.h  messageFactory.cpp  messageFactory.h
creational/factory/test/: CMakeLists.txt  messageFactoryTester.cpp
creational/singleton/: CMakeLists.txt  singleton.cpp  singleton.h
creational/singleton/test/: CMakeLists.txt  singletonTester.cpp
structural/: CMakeLists.txt
structural/adapter/: CMakeLists.txt  README.md  interfaceAdapter.cpp  interfaceAdapter.h
structural/adapter/newInterface/: CMakeLists.txt  newInterface.cpp  newInterface.h
structural/adapter/oldInterface/: CMakeLists.txt  oldInterface.cpp  oldInterface.h
structural/adapter/test/: CMakeLists.txt  adapterTester.cpp
structural/decorator/: CMakeLists.txt  monster.cpp  monster.h
structural/decorator/test/: CMakeLists.txt  decoratorTester.cpp
